@@ -16,8 +16,7 @@ apt-get install tomcat8 git ant openjdk-8-jdk nodejs
 echo "export CATALINA_OPTS="-Xms512m -Xmx1g \
               -XX:+CMSClassUnloadingEnabled \
               -XX:+CMSPermGenSweepingEnabled \
-              -XX:+UseConcMarkSweepGC \
-              -XX:MaxPermSize=256m" >> /etc/default/tomcat8
+              -XX:+UseConcMarkSweepGC" >> /etc/default/tomcat8
 
 # Download and extract their tarball
 npm install -g bower
